--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-OANDA_TOKEN=d01a56f0dcc5e191a9be47614c37e8db-4e0aa27afbe21ee38c5379ae52e4ae23
-OANDA_ACCOUNT_ID=101-003-37170401-001
+OANDA_TOKEN=to_replace
+OANDA_ACCOUNT_ID=to_replace
 OANDA_ENV=practice
