--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,17 @@ __pycache__/
 *.egg-info/
 dist/
 build/
+
+# Large data files (download using scripts instead)
+data/bronze/prices/*.ndjson
+data/bronze/prices/*.backup
+data/silver/**/*.parquet
+data/gold/**/*.parquet
+
+# OS files
+.DS_Store
+*.DS_Store
+
+# Temporary files
+/tmp/
+*.log
