--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,11 @@ scikit-learn>=1.3.0
 xgboost>=2.0.0
 joblib>=1.3.0
 
+# Feature Store
+feast>=0.35.0
+pyarrow>=12.0.0
+redis>=5.0.0
+
 # Deep Learning & NLP
 torch>=2.0.0
 transformers>=4.30.0
@@ -40,7 +45,13 @@ peft>=0.5.0
 # seaborn>=0.12.0
 # plotly>=5.15.0
 
-# API Server (optional)
-# fastapi>=0.100.0
-# uvicorn[standard]>=0.23.0
-# pydantic>=2.0.0
+# API Server
+fastapi>=0.100.0
+uvicorn[standard]>=0.23.0
+pydantic>=2.0.0
+websockets>=12.0
+python-multipart>=0.0.6
+
+# News Simulator
+flask>=3.0.0
+flask-cors>=4.0.0
