Add Evidently monitoring service and update environment configuration
- Introduced Evidently monitoring service with Docker integration.
- Updated .env file to include HOST_REPORTS_DIR.
- Modified .gitignore to exclude reports directory.
- Enhanced README.md with instructions for HOST_REPORTS_DIR.
- Updated batch_inference.py to utilize environment variables for data and reports directories.
- Created Dockerfile and application files for Evidently service.
- Added requirements for Evidently dependencies.

--- a/airflow_mlops/.env
+++ b/airflow_mlops/.env
@@ -18,5 +18,6 @@ AIRFLOW__API_AUTH__JWT_ALGORITHM=HS512
 AIRFLOW__API_AUTH__JWT_SECRET=super_long_random_secret_string_5294223409204920
 AIRFLOW__CORE__EXECUTION_API_SERVER_URL=http://airflow-web:8080/execution/
 
-HOST_DATA_DIR=<Your_working_directory>/fx-ml-pipeline/airflow_mlops/data
-HOST_MODELS_DIR=<Your_working_directory>/fx-ml-pipeline/airflow_mlops/models
+HOST_DATA_DIR=/<Your_working_directory>/fx-ml-pipeline/airflow_mlops/data
+HOST_MODELS_DIR=/<Your_working_directory>/fx-ml-pipeline/airflow_mlops/models
+HOST_REPORTS_DIR=/<Your_working_directory>/fx-ml-pipeline/airflow_mlops/reports
