Update .gitignore to exclude large data files from git
- Exclude data_clean/bronze/market/*.ndjson (large market data files)
- Exclude data_clean/silver/**/*.csv (processed features)
- Exclude data_clean/gold/**/*.csv (training data)
- Exclude outputs/ directory
- Remove large files from git history

Data files should be generated locally using:
  python migrate_to_clean_structure.py --execute
  python src_clean/run_full_pipeline.py --bronze-market <path>

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,14 @@ data/news/bronze/simulated/
 data/news/gold/
 data/news/silver/
 
+# New clean data structure (exclude large files)
+data_clean/bronze/market/*.ndjson
+data_clean/silver/**/*.csv
+data_clean/gold/**/*.csv
+data_clean/gold/**/*.parquet
+data_clean/models/*.pkl
+data_clean/training_outputs/
+
 # Output files
 outputs/
 *.csv
