Pin all versions: Python 3.11.13, XGBoost 2.1.5, MLflow 2.20.5, Airflow 2.10.6
- Updated all Dockerfiles to Python 3.11.13
- Pinned 149 Python packages in requirements.txt
- Upgraded PostgreSQL to 15.9-alpine
- Upgraded Redis to 7.4-alpine
- Upgraded Airflow to 2.10.6-python3.11
- Upgraded MLflow to 2.20.5
- Upgraded Nginx to 1.29.2-alpine
- Added pip, setuptools, wheel version pins
- See docs/VERSIONS.md for full version matrix

--- a/docker/Dockerfile.streamlit
+++ b/docker/Dockerfile.streamlit
@@ -1,29 +1,32 @@
-FROM python:3.9-slim
+# Streamlit Dashboard Dockerfile
+# Python 3.11 with pinned versions
+
+FROM python:3.11.13-slim
+
+LABEL maintainer="fx-ml-pipeline"
+LABEL python.version="3.11.13"
+LABEL description="Streamlit dashboard for S&P 500 ML predictions"
 
 WORKDIR /app
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc \
     g++ \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements
+# Copy requirements first (for layer caching)
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
 
-# Install additional dependencies for Streamlit
-RUN pip install --no-cache-dir \
-    streamlit \
-    plotly \
-    requests \
-    joblib \
-    xgboost \
-    scikit-learn
+# Install Python dependencies with pinned versions
+RUN pip install --no-cache-dir --upgrade pip==25.0.0 setuptools==75.8.0 wheel==0.47.1 && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
-COPY src /app/src
-COPY data_clean /app/data_clean
+COPY src_clean/ui /app/src_clean/ui
+COPY src_clean/__init__.py /app/src_clean/
+COPY data_clean/models /app/data_clean/models
 
 # Expose port
 EXPOSE 8501
@@ -32,5 +35,8 @@ EXPOSE 8501
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD curl --fail http://localhost:8501/_stcore/health || exit 1
 
+# Set Python path
+ENV PYTHONPATH=/app
+
 # Run Streamlit
-CMD ["streamlit", "run", "src/streamlit_dashboard.py", "--server.port=8501", "--server.address=0.0.0.0"]
+CMD ["streamlit", "run", "src_clean/ui/streamlit_dashboard.py", "--server.port=8501", "--server.address=0.0.0.0"]
