--- a/requirements.txt
+++ b/requirements.txt
@@ -72,6 +72,7 @@ mypy==1.18.2
 mypy_extensions==1.1.0
 narwhals==2.8.0
 numpy==1.26.4
+oandapyV20==0.7.2
 openapi-core==0.19.5
 openapi-pydantic==0.5.1
 openapi-schema-validator==0.6.3
@@ -142,6 +143,7 @@ urllib3==2.5.0
 uvicorn==0.37.0
 uvicorn-worker==0.4.0
 uvloop==0.22.1
+watchdog==6.0.0
 watchfiles==1.1.1
 websockets==15.0.1
 Werkzeug==3.1.1
