--- a/requirements.txt
+++ b/requirements.txt
@@ -133,6 +133,7 @@ starlette==0.48.0
 streamlit==1.50.0
 tabulate==0.9.0
 tenacity==8.5.0
+textblob==0.19.0
 threadpoolctl==3.6.0
 toml==0.10.2
 toolz==1.1.0
