Enhanced news scraper with full article content fetching
Key improvements:
- Created hybrid_news_scraper_enhanced.py that fetches full article content from URLs
- Fixed issue where GDELT API only provided metadata (empty body text)
- Updated S&P 500 keywords across all scrapers with expanded categories:
  - Index references (us equities, broad market)
  - Monetary policy & macro (rate hikes/cuts, soft/hard landing, stagflation)
  - Bond market & yields (treasury yields, yield curve, bond rallies/selloffs)
  - Market sentiment (risk-on/risk-off, fear index, safe haven)
  - Earnings season (big tech earnings, bank earnings)
  - Global macro/shocks (oil prices, commodity shock, geopolitical risk)
- Archived old scraper versions to archive/news_scrapers_20251019/
- Updated README with enhanced scraper commands and --fetch-content flag
- Content fetching includes caching to avoid re-fetching articles
- Successfully tested with both recent and 5-year historical data collection

--- a/configs/hybrid_news_sources.yaml
+++ b/configs/hybrid_news_sources.yaml
@@ -182,32 +182,63 @@ collection_strategy:
 # ============================================================================
 
 sp500_keywords:
+  # Index references
   market_indices:
     - "s&p 500"
     - "sp500"
     - "s&p500"
     - "spx"
-    - "standard and poor"
     - "spy"
-    - "stock market"
+    - "standard and poor"
     - "wall street"
     - "nasdaq"
     - "dow jones"
+    - "us equities"
+    - "broad market"
+    - "stock market"
+    - "index fund"
 
+  # Monetary policy & macro
   economic_indicators:
     - "federal reserve"
     - "fed"
     - "fomc"
     - "interest rate"
+    - "rate hike"
+    - "rate cut"
     - "inflation"
     - "cpi"
     - "ppi"
+    - "core inflation"
+    - "economic growth"
+    - "gdp"
+    - "unemployment"
+    - "jobless claims"
+    - "recession"
+    - "soft landing"
+    - "hard landing"
+    - "deflation"
+    - "disinflation"
+    - "stagflation"
     - "employment"
     - "jobs report"
-    - "gdp"
-    - "earnings"
-    - "corporate earnings"
 
+  # Bond market & yields
+  bond_market:
+    - "treasury yields"
+    - "10-year yield"
+    - "2-year yield"
+    - "bond market"
+    - "treasuries"
+    - "government bonds"
+    - "sovereign debt"
+    - "yield curve"
+    - "inverted yield curve"
+    - "bond selloff"
+    - "bond rally"
+    - "fixed income"
+
+  # Market sentiment
   market_sentiment:
     - "market rally"
     - "market selloff"
@@ -215,16 +246,38 @@ sp500_keywords:
     - "bear market"
     - "volatility"
     - "vix"
+    - "fear index"
+    - "risk-on"
+    - "risk-off"
+    - "flight to safety"
+    - "safe haven"
     - "market sentiment"
-    - "recession"
-    - "economic growth"
 
-  policy:
-    - "monetary policy"
-    - "fiscal policy"
-    - "trade war"
+  # Earnings season
+  earnings:
+    - "earnings season"
+    - "big tech earnings"
+    - "bank earnings"
+    - "earnings outlook"
+    - "earnings"
+    - "corporate earnings"
     - "tech stocks"
     - "bank stocks"
+
+  # Global macro / shocks
+  global_macro:
+    - "oil prices"
+    - "brent"
+    - "wti"
+    - "commodity shock"
+    - "geopolitical risk"
+    - "sanctions"
+    - "trade war"
+    - "tariffs"
+    - "pandemic"
+    - "supply chain disruption"
+    - "monetary policy"
+    - "fiscal policy"
 
 # ============================================================================
 # EXPECTED TIMELINE FOR FULL 5-YEAR COLLECTION
