--- a/configs/hybrid_news_sources.yaml
+++ b/configs/hybrid_news_sources.yaml
@@ -130,17 +130,20 @@ free_api_sources:
 
 collection_strategy:
 
-  # Phase 1: GDELT for 2017-2025 (PRIMARY)
+  # Phase 1: GDELT for 2020-2025 (PRIMARY)
   phase_1:
-    period: "2017-01-01 to 2025-10-19"
+    period: "2020-10-19 to 2025-10-19"
     source: "gdelt"
     estimated_articles: "~50,000 - 100,000 articles"
-    estimated_time: "2-5 hours (API rate dependent)"
+    estimated_time: "1-2 weeks with conservative rate limiting"
     command: |
       python src_clean/data_pipelines/bronze/hybrid_news_scraper.py \
-        --start-date 2017-01-01 \
+        --start-date 2020-10-19 \
         --end-date 2025-10-19 \
-        --sources gdelt
+        --sources gdelt \
+        --fetch-content \
+        --max-workers 1 \
+        --delay-between-requests 2.0
 
   # Phase 2: Finnhub for past 1 year (SUPPLEMENT)
   phase_2:
@@ -152,7 +155,10 @@ collection_strategy:
       python src_clean/data_pipelines/bronze/hybrid_news_scraper.py \
         --start-date 2024-10-19 \
         --end-date 2025-10-19 \
-        --sources finnhub
+        --sources finnhub \
+        --fetch-content \
+        --max-workers 2 \
+        --delay-between-requests 1.0
 
   # Phase 3: Daily incremental (ONGOING)
   phase_3:
@@ -163,7 +169,10 @@ collection_strategy:
     command: |
       python src_clean/data_pipelines/bronze/hybrid_news_scraper.py \
         --mode incremental \
-        --sources all
+        --sources all \
+        --fetch-content \
+        --max-workers 1 \
+        --delay-between-requests 2.0
     cron_schedule: "0 1 * * *"  # Daily at 1 AM
 
   # Coverage gaps (2020-2016)
