feat: Add trained XGBoost model with FinBERT features
Add production-ready model trained on 5-year historical data with FinBERT news sentiment features.

Model Artifacts:
- xgboost_classification_30min_20251021_011846.pkl (924KB)
  - Trained on 1.7M samples
  - 30-minute prediction horizon
  - Classification task (Up/Down)

Performance Metrics:
- AUC: 0.636 (63.6%)
- Accuracy: 58.92%
- F1 Score: 0.583
- Cross-validation: 50.68% ± 0.66%

Features:
- Market technical indicators (SMA, EMA, RSI, MACD, Bollinger Bands)
- Market microstructure (spreads, volume, order flow)
- Market volatility (ATR, realized vol, Garman-Klass)
- News sentiment signals from FinBERT (60-min aggregated)

Files Added:
- data_clean_5year/models/xgboost_classification_30min_20251021_011846.pkl
- data_clean_5year/models/xgboost_classification_30min_20251021_011846_metrics.json
- data_clean_5year/models/xgboost_classification_30min_20251021_011846_features.json
- data_clean_5year/models/xgboost_classification_30min_20251021_011846_feature_importance.csv
- data_clean_5year/models/xgboost_classification_30min_20251021_011846_feature_importance.png

Training Details:
- Dataset: SPX500 5-year historical (2020-2025)
- News articles processed: 12,950
- Trading signals generated: 8,769
- Total training time: ~16 minutes

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,9 @@ data_clean/training_outputs/
 outputs/
 *.csv
 *.pkl
+!data_clean_5year/models/*.pkl
+!data_clean_5year/models/*.csv
+!data_clean_5year/models/*.png
 *.joblib
 
 # OS files
@@ -63,4 +66,8 @@ airflow_logs/
 data_clean/*.zip
 *.zip
 *.db
-data_clean_5year/
+# Exclude 5-year test outputs except models
+data_clean_5year/bronze/
+data_clean_5year/silver/
+data_clean_5year/gold/
+data_clean_5year/training_outputs/
