--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate
 aiohttp==3.13.1
 alembic==1.17.0
 altair==5.5.0
@@ -20,6 +21,7 @@ cryptography==46.0.3
 cycler==0.12.1
 cyclopts==3.24.0
 dask==2025.10.0
+datasets
 databricks-sdk==0.68.0
 dill==0.3.9
 dnspython==2.8.0
@@ -137,7 +139,11 @@ textblob==0.19.0
 threadpoolctl==3.6.0
 toml==0.10.2
 toolz==1.1.0
+torch
+torchaudio
+torchvision
 tornado==6.5.2
+transformers     
 tqdm==4.67.1
 typeguard==4.4.4
 typing-inspection==0.4.2
