feat: Optimize FinBERT processing with batch inference and reorganize docs
- Implement batch processing for FinBERT sentiment analysis (20-30x speedup)
- Add analyze_batch_with_finbert() method for processing 64 articles at once
- Update process_articles() to use batching instead of sequential processing
- Move documentation files to docs/ folder for better organization
- Add comprehensive monitoring and alerting system
- Update news simulator UI with improved controls
- Enhance Streamlit dashboard with real-time predictions

Performance improvements:
- FinBERT processing: 4.5 hours → 10-15 minutes (25,194 articles)
- Reduced CPU overhead with batched tensor operations
- Improved memory efficiency through batch processing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -233,6 +233,11 @@ services:
       - REDIS_PORT=6379
       - MLFLOW_TRACKING_URI=http://mlflow:5000
       - FEAST_REDIS_HOST=redis
+      # Email alerting configuration
+      - SMTP_SERVER=smtp.gmail.com
+      - SMTP_PORT=587
+      - ALERT_EMAIL=linoux80@gmail.com
+      - ALERT_EMAIL_PASSWORD=oejy pweq gtqf kojq
     command: uvicorn src_clean.api.main:app --host 0.0.0.0 --port 8000 --reload
 
   # ============================================================================
