--- a/requirements.txt
+++ b/requirements.txt
@@ -84,6 +84,7 @@ opentelemetry-api==1.38.0
 opentelemetry-proto==1.38.0
 opentelemetry-sdk==1.38.0
 opentelemetry-semantic-conventions==0.59b0
+optuna==3.6.1
 packaging==25.0
 pandas==2.3.3
 parse==1.20.2
@@ -124,6 +125,7 @@ scikit-learn==1.7.2
 scipy==1.16.2
 seaborn==0.13.2
 six==1.17.0
+shap==0.45.1
 smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.44
