optuna 2 stage hyperparameter tuning and AR pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,73 @@ notebooks/xgb_test/hyperparameters/sp500_prediction/shap_summary.json
 notebooks/xgb_test/hyperparameters/sp500_prediction/stage1_summary.json
 notebooks/xgb_test/hyperparameters/sp500_prediction/stage2_summary.json
 .gitignore
+notebooks/AR_test/sp500_prediction_20251102_114200/sp500_prediction/predictions_vs_actuals.png
+notebooks/AR_test/sp500_prediction_20251102_114424/ar_ols_30min_20251102_114453_features.json
+notebooks/AR_test/sp500_prediction_20251102_114424/ar_ols_30min_20251102_114453_metrics.json
+notebooks/AR_test/sp500_prediction_20251102_114424/sp500_prediction/predictions_vs_actuals.png
+notebooks/AR_test/sp500_prediction_20251102_123830/ar_ols_30min_20251102_124012_features.json
+notebooks/AR_test/sp500_prediction_20251102_123830/ar_ols_30min_20251102_124012_metrics.json
+notebooks/AR_test/sp500_prediction_20251102_123830/sp500_prediction/predictions_vs_actuals.png
+notebooks/AR_test/sp500_prediction_20251102_124313/ar_ols_30min_20251102_124359_features.json
+notebooks/AR_test/sp500_prediction_20251102_124313/ar_ols_30min_20251102_124359_metrics.json
+notebooks/AR_test/sp500_prediction_20251102_124313/ar_ols_30min_20251102_124833_features.json
+notebooks/AR_test/sp500_prediction_20251102_124313/ar_ols_30min_20251102_124833_metrics.json
+notebooks/AR_test/sp500_prediction_20251102_124313/sp500_prediction/predictions_vs_actuals.png
+notebooks/AR_test/sp500_prediction_20251102_124952/ar_ols_30min_20251102_125026_features.json
+notebooks/AR_test/sp500_prediction_20251102_124952/ar_ols_30min_20251102_125026_metrics.json
+notebooks/AR_test/sp500_prediction_20251102_124952/sp500_prediction/predictions_vs_actuals.png
+notebooks/AR_test/sp500_prediction_20251102_125130/ar_ols_30min_20251102_125203_features.json
+notebooks/AR_test/sp500_prediction_20251102_125130/ar_ols_30min_20251102_125203_metrics.json
+notebooks/AR_test/sp500_prediction_20251102_125130/sp500_prediction/predictions_vs_actuals.png
+notebooks/AR_test/sp500_prediction_20251102_125339/ar_ols_30min_20251102_125414_features.json
+notebooks/AR_test/sp500_prediction_20251102_125339/ar_ols_30min_20251102_125414_metrics.json
+notebooks/AR_test/sp500_prediction_20251102_125339/sp500_prediction/predictions_vs_actuals.png
+notebooks/AR_test/sp500_prediction_20251102_125434/ar_ols_30min_20251102_125508_features.json
+notebooks/AR_test/sp500_prediction_20251102_125434/ar_ols_30min_20251102_125508_metrics.json
+notebooks/AR_test/sp500_prediction_20251102_125434/sp500_prediction/predictions_vs_actuals.png
+notebooks/AR_test/sp500_prediction_20251102_130303/ar_ols_30min_20251102_130742_features.json
+notebooks/AR_test/sp500_prediction_20251102_130303/ar_ols_30min_20251102_130742_metrics.json
+notebooks/AR_test/sp500_prediction_20251102_130303/sp500_prediction/predictions_vs_actuals.png
+notebooks/AR_test/sp500_prediction_20251102_130944/ar_ols_30min_20251102_131031_features.json
+notebooks/AR_test/sp500_prediction_20251102_130944/ar_ols_30min_20251102_131031_metrics.json
+notebooks/AR_test/sp500_prediction_20251102_130944/sp500_prediction/predictions_vs_actuals.png
+notebooks/AR_test/sp500_prediction_20251102_131149/ar_ols_30min_20251102_135740_features.json
+notebooks/AR_test/sp500_prediction_20251102_131149/ar_ols_30min_20251102_135740_metrics.json
+notebooks/AR_test/sp500_prediction_20251102_131149/sp500_prediction/predictions_vs_actuals.png
+notebooks/AR_test/sp500_prediction_20251102_131149_FULL/ar_ols_30min_20251102_135740_features.json
+notebooks/AR_test/sp500_prediction_20251102_131149_FULL/ar_ols_30min_20251102_135740_metrics.json
+notebooks/AR_test/sp500_prediction_20251102_131149_FULL/sp500_prediction/predictions_vs_actuals.png
+notebooks/AR_test/sp500_prediction_20251102_151453/ar_ols_30min_20251102_151527_features.json
+notebooks/AR_test/sp500_prediction_20251102_151453/ar_ols_30min_20251102_151527_metrics.json
+notebooks/AR_test/sp500_prediction_20251102_151453/sp500_prediction/predictions_vs_actuals.png
+notebooks/AR_test/sp500_prediction_20251102_152327/ar_ols_30min_20251102_152409_features.json
+notebooks/AR_test/sp500_prediction_20251102_152327/ar_ols_30min_20251102_152409_metrics.json
+notebooks/AR_test/sp500_prediction_20251102_152327/sp500_prediction/predictions_vs_actuals.png
+notebooks/xgb_test/sp500_prediction_20251102_151326/xgboost_regression_30min_20251102_151421_features.json
+notebooks/xgb_test/sp500_prediction_20251102_151326/xgboost_regression_30min_20251102_151421_metrics.json
+notebooks/xgb_test/sp500_prediction_20251102_151326/hyperparameters/shap_feature_importance.png
+notebooks/xgb_test/sp500_prediction_20251102_151326/hyperparameters/shap_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_151326/hyperparameters/stage1_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_151326/hyperparameters/stage2_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_151326/sp500_prediction/predictions_vs_actuals.png
+notebooks/xgb_test/sp500_prediction_20251102_153021/xgboost_regression_30min_20251102_153057_features.json
+notebooks/xgb_test/sp500_prediction_20251102_153021/xgboost_regression_30min_20251102_153057_metrics.json
+notebooks/xgb_test/sp500_prediction_20251102_153021/hyperparameters/shap_feature_importance.png
+notebooks/xgb_test/sp500_prediction_20251102_153021/hyperparameters/shap_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_153021/hyperparameters/stage1_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_153021/hyperparameters/stage2_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_153021/sp500_prediction/predictions_vs_actuals.png
+notebooks/xgb_test/sp500_prediction_20251102_153710/xgboost_regression_30min_20251102_153806_features.json
+notebooks/xgb_test/sp500_prediction_20251102_153710/xgboost_regression_30min_20251102_153806_metrics.json
+notebooks/xgb_test/sp500_prediction_20251102_153710/hyperparameters/shap_feature_importance.png
+notebooks/xgb_test/sp500_prediction_20251102_153710/hyperparameters/shap_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_153710/hyperparameters/stage1_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_153710/hyperparameters/stage2_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_153710/sp500_prediction/predictions_vs_actuals.png
+notebooks/xgb_test/sp500_prediction_20251102_154044/xgboost_regression_30min_20251102_154812_features.json
+notebooks/xgb_test/sp500_prediction_20251102_154044/xgboost_regression_30min_20251102_154812_metrics.json
+notebooks/xgb_test/sp500_prediction_20251102_154044/hyperparameters/shap_feature_importance.png
+notebooks/xgb_test/sp500_prediction_20251102_154044/hyperparameters/shap_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_154044/hyperparameters/stage1_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_154044/hyperparameters/stage2_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_154044/sp500_prediction/predictions_vs_actuals.png
