--- a/docker/monitoring/requirements.txt
+++ b/docker/monitoring/requirements.txt
@@ -3,3 +3,8 @@ fastapi==0.115.*
 uvicorn==0.30.*
 pandas>=2.0
 evidently==0.6.7
+scikit-learn==1.4.2
+matplotlib==3.8.0
+plotly==5.16.1
+seaborn==0.13.2
+shap==0.42.1
