--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,17 @@ notebooks/xgb_test/sp500_prediction_20251102_154044/hyperparameters/shap_summary
 notebooks/xgb_test/sp500_prediction_20251102_154044/hyperparameters/stage1_summary.json
 notebooks/xgb_test/sp500_prediction_20251102_154044/hyperparameters/stage2_summary.json
 notebooks/xgb_test/sp500_prediction_20251102_154044/sp500_prediction/predictions_vs_actuals.png
+notebooks/xgb_test/sp500_prediction_20251102_170852/xgboost_regression_30min_20251102_171603_features.json
+notebooks/xgb_test/sp500_prediction_20251102_170852/xgboost_regression_30min_20251102_171603_metrics.json
+notebooks/xgb_test/sp500_prediction_20251102_170852/hyperparameters/shap_feature_importance.png
+notebooks/xgb_test/sp500_prediction_20251102_170852/hyperparameters/shap_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_170852/hyperparameters/stage1_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_170852/hyperparameters/stage2_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_170852/sp500_prediction/predictions_vs_actuals.png
+notebooks/xgb_test/sp500_prediction_20251102_181330/xgboost_regression_30min_20251102_205528_features.json
+notebooks/xgb_test/sp500_prediction_20251102_181330/xgboost_regression_30min_20251102_205528_metrics.json
+notebooks/xgb_test/sp500_prediction_20251102_181330/hyperparameters/shap_feature_importance.png
+notebooks/xgb_test/sp500_prediction_20251102_181330/hyperparameters/shap_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_181330/hyperparameters/stage1_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_181330/hyperparameters/stage2_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_181330/sp500_prediction/predictions_vs_actuals.png
